--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,6 @@
 
 @layer utilities {
   .input__filed {
-    @apply flex-1 rounded-full border-none bg-[hsl(0,0%,12%)]  p-2.5 text-sm outline-none ring-2 ring-primary ring-offset-4  ring-offset-dark placeholder:text-[hsl(33,10%,45%)] aria-[invalid="true"]:ring-red-500;
+    @apply flex-1 rounded-full border-none bg-[hsl(0,0%,12%)]  p-2.5 text-sm outline-none ring-2 ring-[hsl(33,10%,45%)] ring-offset-4  ring-offset-dark placeholder:text-[hsl(33,10%,45%)] aria-[invalid="true"]:ring-red-500;
   }
 }
